Add refresh button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <hr/>
         <br/>
         <a class="btn btn-primary" href="https://github.com/vutondesign/bounce/issues/new" role="button">Submit a quote</a>
+        <a class="btn btn-primary" onClick="document.location.reload(true)" role="button">Get another quote</a>
        </div>
      </div>
      <p style="color: #34495e;">Refresh the page for another quote.</p>
