--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        </div>
      </div>
      <p style="color: #34495e;">Refresh the page for another quote.</p>
-     <p style="color: #34495e;">Made with bootstrap, HTML & Javascript - Hosted on GitHub Pages.</p>
+     <p style="color: #34495e;">Made with bootstrap, HTML &amp; Javascript - Hosted on GitHub Pages.</p>
 </center>
 </body>
 </html>
