--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-	  <title>Bounce</title>
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-		<link rel="stylesheet" href="./style.css">
-	</head>
-	<body>
-		<center>
-		    <div class="jumbotron jumbotron-fsluid" style="background-color: #2c3e50;">
-		      <div class="container">
-		        <h1 class="display-4" style="color: #3498db;">Bounce</h1>
-		        <p class="lead" style="color: white;">A free random quote generator</p>
-		        <br/>
-		        <hr/>
-		        <br/>
-		        <p class="lead" style="color: white;" id="quote"></p>
-		        <br/>
-		        <hr/>
-		        <br/>
-		        <a class="btn btn-primary" href="https://github.com/vutondesign/bounce/issues/new" role="button">Submit a quote</a>
-		        <a class="btn btn-primary" onClick="dysplayQuote();" role="button">Get another quote</a>
-		       </div>
-		     </div>
-		     <p style="color: #34495e;">Made with HTML, bootstrap &amp; Javascript - Hosted on GitHub Pages.</p>
-		</center>
-	</body>
-	<script src="./main.js" type="text/javascript"></script>
+<head>
+  <title> Bounce </title>
+  <script src="main.js" type="text/javascript"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+  <style>
+  body {
+    color: white;
+  }
+  </style>
+</head>
+<body>
+<center>
+    <div class="jumbotron jumbotron-fsluid" style="background-color: #2c3e50;">
+      <div class="container">
+         <h1 class="display-4" style="color: #3498db;">Bounce</h1>
+         <p class="lead" style="color: white;">A free random quote generator</p>
+        <br/>
+        <hr/>
+        <br/>
+         <p class="lead" style="color: white;"><script type="text/javascript">writeRandomQuote();</script></p>
+        <br/>
+        <hr/>
+        <br/>
+        <a class="btn btn-primary" href="https://github.com/vutondesign/bounce/issues/new" role="button">Submit a quote</a>
+        <a class="btn btn-primary" onClick="document.location.reload(true)" role="button">Get another quote</a>
+       </div>
+     </div>
+     <p style="color: #34495e;">Made with bootstrap, HTML &amp; Javascript - Hosted on GitHub Pages.</p>
+</center>
+</body>
 </html>
